Fixed OP overlap with Write Post button

--- a/forum/static/forum/style.css
+++ b/forum/static/forum/style.css
@@ -88,7 +88,7 @@ html, body{
 			padding: 4px 6px;
 			right: 2px;
             text-align: center;
-			bottom: -38px;
+			bottom: -35px;
 			border: 1px black solid;
 			border-radius: 2px;
 			background: #413F3F;
@@ -130,7 +130,7 @@ html, body{
 			/*color: #FFA60B;*/
 		}
 		.catForums li:nth-child(odd){
-			/*background: #4AD5F6;*/
+			/*background: #4AD5F6;
 		}
 		.threads a:hover{
 			color: darkslategray;
